# easy-docx-template-rs

./: Cargo.toml  LICENSE  README.md  test1.docx
example/: test.docx  ~$test.docx
example/blocks/: block1.docx
src/: docx.rs  lib.rs  placeholder_helpers.rs  utils.rs
