[package]
name = "easy-docx-template"
version = "0.1.0"
edition = "2024"
description = "create docx template"
license = "MIT"
homepage = ""
repository = "https://github.com/AltDemono/easy-docx-template-rs"
documentation = ""
categories = ["template-engine"]
keywords = ["Docx", "Word", "Template", "Placeholders"]

[dependencies]
zip = "0.6"
quick-xml = "0.31"
log = "0.4.28"
serde_json = "1.0.145"
