[package]
name = "easy-docx-template"
version = "0.1.9-fixed"
edition = "2024"
description = "create docx template"
license = "MIT"
homepage = "https://github.com/AltDemono/easy-docx-template-rs"
repository = "https://github.com/AltDemono/easy-docx-template-rs"
categories = ["template-engine"]
keywords = ["Docx", "Word", "Template", "Placeholders", "Template-engine"]
exclude = [ "imgs/*", "example/*", "output.docx", "README.md"]

[dependencies]
zip = "0.6"
quick-xml = "0.31"
serde_json = "1.0.145"
regex = "1.11.3"
